# pystatusbar-ng

./: README.md  TODO  build.sh  config.ini  configure.ac  makefile
plugins/: clock.lua  countdown.lua  cputemp.lua  dayuptime.lua  loadavg.lua  updates.lua  uptime.lua  wettercom.lua  wifi.lua
src/: config.cpp  config.hpp  main.cpp  main.hpp  plugin.cpp  plugin.hpp  statusbar.cpp  statusbar.hpp
